# rust

./: Cargo.toml  README.md  main  main.rs
backend/: .env.example  Cargo.toml  README.md
backend/migrations/2026-06-20-073311-0000_create_users/: up.sql
backend/migrations/2026-06-27-143009-0000_create_users/: up.sql
backend/src/: config.rs  main.rs  schema.rs  state.rs
backend/src/common/: validation.rs
backend/src/configs/: auth.rs  mod.rs  mpesa.rs
backend/src/db/: migrations.rs  mod.rs
backend/src/dto/: user_dto.rs
backend/src/handlers/: auth.rs  mod.rs  mpesa.rs  user.rs
backend/src/models/: mpesa.rs  user.rs
backend/src/routes/: auth_route.rs  mod.rs  mpesa.rs  test_route.rs  user_routes.rs
backend/src/services/: mod.rs  mpesa.rs
backend/src/utils/: mod.rs  mpesa.rs  utils.rs
client/: .cta.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: styles.css
client/src/lib/: auth.ts
client/src/routes/: dashboard.tsx  login.tsx
dsa/src/: main.rs
getting-started/debug/src/: main  main.rs
getting-started/formatted/src/: main  main.rs
learnRust/src/: compound_data_types  compound_data_types.rs  main  main.rs
lesson_one/src/: main.rs
src/: main.rs
