[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.19", features = ["derive"] }
# Diesel Async ecosystem
diesel = { version = "2.3", features = ["postgres","chrono"] }
diesel-async = { version = "0.8", features = ["postgres", "bb8"] }
diesel_migrations = "2.3"
bb8 = "0.9"

#Utilities
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

